	r5
- Added Popup Manager	

	r4
- Fixed bug in MoneySelector that made the keyboard unusable

	r3
- Added callback to SetData method of the DataGrid control (to be called when completed)

	Release 0.4.4
- First version